# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("./../../../../sensor.gni")

ohos_fuzztest("EnableActiveInfoCBStubFuzzTest") {
  module_out_path = FUZZ_MODULE_OUT_PATH

  fuzz_config_file =
      "$SUBSYSTEM_DIR/test/fuzztest/services/enableactiveinfocbstub_fuzzer"

  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api",
    "$SUBSYSTEM_DIR/services/hdi_connection/interface/include",
    "$SUBSYSTEM_DIR/services/hdi_connection/adapter/include",
    "$SUBSYSTEM_DIR/services/hdi_connection/hardware/include",
    "$SUBSYSTEM_DIR/services/include",
    "$SUBSYSTEM_DIR/test/fuzztest/services/enableactiveinfocbstub_fuzzer",
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/utils/ipc/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "enableactiveinfocbstub_fuzzer.cpp" ]

  defines = sensor_default_defines

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native:sensor_interface_native",
    "$SUBSYSTEM_DIR/services:libsensor_service_static",
    "$SUBSYSTEM_DIR/utils/common:libsensor_utils",
    "$SUBSYSTEM_DIR/utils/ipc:libsensor_ipc",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [
    # deps file
    ":EnableActiveInfoCBStubFuzzTest",
  ]
}
